latest code updated

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3056,3 +3056,12 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
   path {
   fill: #8c8c8c;
 }
+
+/* custom css */
+.third-page-next-sync{
+  position: relative;
+}
+
+.third-page-switch{
+  position: absolute;
+}
