--- a/src/assets/styles/responsive.css
+++ b/src/assets/styles/responsive.css
@@ -9,6 +9,8 @@
 =========================================================
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 */
+
+
 @media (min-width: 992px) {
   .layout-dashboard .ant-layout-footer {
     margin: 0 0 20px 20px;
@@ -21,7 +23,7 @@
   .layout-dashboard .ant-layout {
     width: auto;
     flex-shrink: 1;
-    margin-left: 270px;
+    margin-left: 250px;
   }
   .layout-dashboard .header-control .sidebar-toggler {
     display: none;
@@ -30,8 +32,10 @@
 
 @media (min-width: 768px) {
   .layout-dashboard .ant-layout-header {
-    margin: 10px 20px;
-  }
+    border-radius: 0;
+    background-color: #fff;
+    margin: 0px 0px 10px 0px;
+}
   .layout-dashboard .header-control {
     margin-top: 0;
   }
